<resources>
    <string name="app_name">UTS Helps</string>
    <string name="session_name">Sessions</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="the_first_fragment_is_working">The first fragment is working!</string>
    <string name="the_second_fragment_is_working_too">The second fragment is working too</string>
    <string name="login">LOGIN</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="forget_password">FORGOT PASSWORD</string>
    <string name="error_student_id_numbers">A ID needs to be 8 numbers</string>
    <string name="error_password_six_characters">Password must be 6 characters or more</string>
    <string name="error_password_twenty_characters">Password must be 20 characters or less</string>
    <string name="searchable">Searchable</string>
    <string name="session_search">Search</string>
    <string name="uts_helps">UTS:Helps</string>
    <string name="preferred_name_optional">Preferred Name (Optional)</string>
    <string name="contact_number">Contact Number*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="x">X</string>
    <string name="gender_optional">Gender (optional)</string>
    <string name="degree_required">Degree*</string>
    <string name="postgraduate">Postgraduate</string>
    <string name="undergraduate">Undergraduate</string>
    <string name="year_required">Year*</string>
    <string name="first_language_required">First Language*</string>
    <string name="country_of_origin_required">Country of Origin*</string>
    <string name="register_all_caps">REGISTER</string>
    <string name="error_preferred_name_invalid">Name can only contain letters</string>
    <string name="error_phone_number_invalid">Please enter a valid contact number</string>
    <string name="permanent">Permanent</string>
    <string name="international">International</string>
    <string name="degree_status_required">Degree Status*</string>
    <string-array name="years">
        <item>1st Year</item>
        <item>2nd Year</item>
        <item>3rd Year</item>
        <item>4th Year</item>
        <item>5th Year</item>
    </string-array>
    <string-array name="languages">
        <item>Abkhazian</item>
        <item>Afar</item>
        <item>Afrikaans</item>
        <item>Albanian</item>
        <item>Amharic</item>
        <item>Arabic</item>
        <item>Armenian</item>
        <item>Assamese</item>
        <item>Aymara</item>
        <item>Azerbaijani</item>
        <item>Bashkir</item>
        <item>Basque</item>
        <item>Belarusian</item>
        <item>Bengali</item>
        <item>Bhutani</item>
        <item>Bihari</item>
        <item>Bislama</item>
        <item>Bosnian</item>
        <item>Breton</item>
        <item>Bulgarian</item>
        <item>Burmese</item>
        <item>Catalan</item>
        <item>Chinese (Cantonese)</item>
        <item>Chinese (Mandarin)</item>
        <item>Chinese (other)</item>
        <item>Corsican</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dhivehi</item>
        <item>Dutch</item>
        <item>English</item>
        <item>Esperanto</item>
        <item>Estonian</item>
        <item>Faroese</item>
        <item>Farsi</item>
        <item>Fiji</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Frisian</item>
        <item>Galician</item>
        <item>Ganda</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Gree</item>
        <item>Greenlandic</item>
        <item>Guarani</item>
        <item>Gujarati</item>
        <item>Haitian Creole</item>
        <item>Hausa</item>
        <item>Hebrew</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Indonesian</item>
        <item>Inuktitut</item>
        <item>Inupiak</item>
        <item>Irish</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Javanese</item>
        <item>Kannada</item>
        <item>Kashmiri</item>
        <item>Kazakh</item>
        <item>Khmer</item>
        <item>Kinyarwanda</item>
        <item>Kirundi</item>
        <item>Korean</item>
        <item>Kurdish</item>
        <item>Kyrgyz</item>
        <item>Laothian</item>
        <item>Latin</item>
        <item>Latvian</item>
        <item>Lingala</item>
        <item>Lithuanian</item>
        <item>Macedonian</item>
        <item>Malagasy</item>
        <item>Malay</item>
        <item>Malayalam</item>
        <item>Maltese</item>
        <item>Maori</item>
        <item>Marathi</item>
        <item>Moldavian</item>
        <item>Mongolian</item>
        <item>Nauru</item>
        <item>Nepali</item>
        <item>Norwegian (Bokmal)</item>
        <item>Norwegian (Nynorsk)</item>
        <item>Oriya</item>
        <item>Oromo</item>
        <item>Pashto/Pushto</item>
        <item>Polish</item>
        <item>Portuguese (Brazil)</item>
        <item>Portuguese</item>
        <item>Punjabi</item>
        <item>Quechua</item>
        <item>Rhaeto-Romance</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Samoan</item>
        <item>Sangho</item>
        <item>Sanskrit</item>
        <item>Scots Gaelic</item>
        <item>Serbian</item>
        <item>Serbo-Croatian</item>
        <item>Sesotho</item>
        <item>Setswana</item>
        <item>Shona</item>
        <item>Sindhi</item>
        <item>Sinhalese</item>
        <item>Siswati</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Somali</item>
        <item>Spanish</item>
        <item>Sundanese</item>
        <item>Swahili</item>
        <item>Swedish</item>
        <item>Tagalog</item>
        <item>Tajik</item>
        <item>Tamil</item>
        <item>Tatar</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Tibetan</item>
        <item>Tigrinya</item>
        <item>Tonga</item>
        <item>Tsonga</item>
        <item>Turkish</item>
        <item>Turkmen</item>
        <item>Twi</item>
        <item>Uighur</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Uzbek</item>
        <item>Vietnamese</item>
        <item>Volapuk</item>
        <item>Welsh</item>
        <item>Wolof</item>
        <item>Xhosa</item>
        <item>Yiddish</item>
        <item>Zhuang</item>
        <item>Zulu</item>
    </string-array>
</resources>