<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin_double"
            android:layout_marginRight="@dimen/activity_horizontal_margin_double"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uts_helps"
                android:textSize="34sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_vertical_margin"
                android:layout_marginTop="@dimen/form_vertical_margin">

                <EditText
                    android:id="@+id/fragment_register_preferred_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/preferred_name_optional"
                    android:inputType="textPersonName|textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_vertical_margin"
                android:layout_marginTop="@dimen/form_vertical_margin">

                <EditText
                    android:id="@+id/fragment_register_contact_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/contact_number"
                    android:inputType="phone"
                    android:maxLength="12" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/gender_optional" />

                <RadioGroup
                    android:id="@+id/fragment_register_gender_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/form_vertical_margin"
                    android:layout_marginTop="@dimen/form_vertical_margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fragment_register_gender_male_radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/fragment_register_gender_female_radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female" />

                    <RadioButton
                        android:id="@+id/fragment_register_gender_x_radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/x" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/degree_required" />

                <RadioGroup
                    android:id="@+id/fragment_register_degree_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/form_vertical_margin"
                    android:layout_marginTop="@dimen/form_vertical_margin"
                    android:checkedButton="@+id/fragment_register_degree_undergraduate_radio_button"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fragment_register_degree_undergraduate_radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/undergraduate" />

                    <RadioButton
                        android:id="@+id/fragment_register_degree_postgraduate_radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/postgraduate" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_vertical_margin"
                android:layout_marginTop="@dimen/form_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/degree_status_required" />

                <RadioGroup
                    android:id="@+id/fragment_register_degree_status_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@+id/fragment_register_degree_status_permanent_radio_button"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/fragment_register_degree_status_permanent_radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/permanent" />

                    <RadioButton
                        android:id="@+id/fragment_register_degree_status_international_radio_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/international" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_vertical_margin"
                android:layout_marginTop="@dimen/form_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/year_required" />

                <Spinner
                    android:id="@+id/fragment_register_year_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/years" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_vertical_margin"
                android:layout_marginTop="@dimen/form_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/first_language_required" />

                <Spinner
                    android:id="@+id/fragment_register_language_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/languages"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_vertical_margin"
                android:layout_marginTop="@dimen/form_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/country_of_origin_required" />

                <Spinner
                    android:id="@+id/fragment_register_country_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/countries"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <Button
                android:id="@+id/fragment_register_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_all_caps" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
