<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <!--<LinearLayout, Can't get this to work lol - setting it aside for now -->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="96dp"-->
            <!--android:scaleType="fitXY"-->
            <!--android:id="@+id/uts_logo" />-->
        <!---->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_login_student_id_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/student_id"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/activity_login_student_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/activity_login_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in" />

            <Button
                android:id="@+id/activity_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register" >

            </Button>
        </LinearLayout>

    </ScrollView>



</RelativeLayout>
